fixed issue with stars too close to text

--- a/less/pages/p7.less
+++ b/less/pages/p7.less
@@ -40,7 +40,7 @@
 
   .b1 {
     fill: lighten(@page7,10%);
-    top: 20%;
+    top: 15%;
     right: 15%;
     @media screen {
       animation: twinkle 6s infinite linear;
@@ -56,7 +56,7 @@
   }
   .b3 {
     fill: lighten(@page7,20%);
-    top: 27%;
+    top: 5%;
     left: 50%;
     @media screen {
       animation: twinkle 6s infinite linear 4s;
